Fix label alignment

--- a/src/Umbraco.Web.UI.Client/src/less/components/umb-form-check.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/umb-form-check.less
@@ -18,6 +18,8 @@ label.umb-form-check--checkbox{
     }
     .umb-form-check__info {
         margin-left:20px;
+        position: relative;
+        top: 3px;
     }
     
 
